# temporal_dimensionality

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_local.txt  seq.sh
notebooks/figures/: fig_2.ipynb  fig_3.ipynb  fig_4.ipynb  fig_5d.ipynb  sfig_1.ipynb  sfig_2.ipynb  sfig_3.ipynb  sfig_4.ipynb  sfig_5.ipynb
scripts/: cache_data.py  compute_score.py  download_behavior_data.py  image_matching_experiment.py
src/lib/: _notebook_helpers.py
src/lib/analyses/: _plots.py  _utilities.py
src/lib/analyses/behavior/: experiment_helper.py
src/lib/analyses/loaders/: __init__.py  load_significant_times.py  load_weights.py
src/lib/analyses/main_analyses/: __init__.py  decoding.py  decoding_generalization.py  dim_reduction_visualization.py  geometries.py  kernel_comparison.alt.py  kernel_comparison.py  kernel_comparison_cross_subject.py  kernels.py  mftma_geometries.py  pc_generalization.alt.py  pc_generalization.py  plssvd_cross_subject.py  remaining_var.py  remaining_var_color_coded.py  remaining_var_concat.py  remaining_var_test_only.py  rot_inv_generalization.py  tt_decoding.py  tt_decoding_cross_subject.py  tt_decoding_generalization.py  tt_encoding.py  tt_pca.py  tt_pca_cross_subject.py  tt_pca_cross_subject_splits.py  tt_pca_nonclustered.py  tt_stack_decoding.py  tt_stack_pca.py  umap_pc_reconstruction.py  weights_eeg_variance_partitioning.py
src/lib/analyses/model_analyses/: __init__.py  model_decoding.py
src/lib/analyses/weights_sanity_checks/: __init__.py  split_dim_weights.py  split_dim_weights_cross_subjects.py  split_dim_weights_rdm.py  split_dim_weights_rdm_cross_subjects.py
src/lib/computation/classifiers/: __init__.py  _definition.py  _lda_classifier.py  _loader.py  _sklearn_classifiers.py
src/lib/computation/metrics/: __init__.py  _compute_metric.py  _cuda_mftma.py  _mftma.py
src/lib/computation/regressions/: __init__.py  _loader.py  _ridge_regression.py  _sklearn_regressions.py
src/lib/computation/scorers/: __init__.py  _cv_scorer.py  _definition.py  _tt_scorer.py
src/lib/computation/statistics/: __init__.py  _cluster_correction.py  _p.py
src/lib/datasets/: __init__.py  _definition.py  _loader.py
src/lib/datasets/hebart2023_things_meg/: _data.py  (+1 more)
src/lib/models/: __init__.py  _definition.py
src/lib/raj/: bin_plotting.py
src/lib/utilities/: __init__.py  _path.py  _rand.py  _seed.py
(+6 files in other folders)
